--- a/DeepLearningStudy/ex_lab-11-1-mnist_cnn.ipynb
+++ b/DeepLearningStudy/ex_lab-11-1-mnist_cnn.ipynb
@@ -119,12 +119,16 @@
    },
    "source": [
     "# Step 4 + 5: Create weights + do inference\n",
-    "> the model is conv -> relu -> pool -> conv -> relu -> pool -> fully connected -> softmax\n",
-    "\n",
+    "> the model is conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$<br/>\n",
+    "conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ <br/>\n",
+    "fully connected $\\rightarrow$ softmax\n",
     "\n",
     "> w is initialized to random variables with normal random distribution. <br/>\n",
-    ">    Conv     -> (?, 28, 28, 32) <br/>\n",
-    ">    Pool     -> (?, 14, 14, 32)"
+    ">    Conv     $\\rightarrow$ (?, 28, 28, 32) <br/>\n",
+    ">    Pool     $\\rightarrow$ (?, 14, 14, 32) <br/>\n",
+    "> $\\rightarrow$ <br/>\n",
+    ">    Conv     $\\rightarrow$ (?, 14, 14, 64) <br/>\n",
+    ">    Pool     $\\rightarrow$ (?, 7, 7, 64)"
    ]
   },
   {
@@ -140,6 +144,7 @@
     "W1 = tf.Variable(tf.random_normal([3, 3, 1, 32], stddev=0.01))\n",
     "#    Conv     -> (?, 28, 28, 32)\n",
     "#    Pool     -> (?, 14, 14, 32)\n",
+    "\n",
     "L1 = tf.nn.conv2d(X_img, W1, strides=[1, 1, 1, 1], padding='SAME')\n",
     "L1 = tf.nn.relu(L1)\n",
     "L1 = tf.nn.max_pool(L1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
