--- a/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
+++ b/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
@@ -93,22 +93,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3: create placeholders for features and labels\n",
+    "##### Step 3: create placeholders for features and labels\n",
     "> each image in the MNIST data is of shape 28*28 = 784 <br/>\n",
     "> therefore, each image is represented with a 1x784 tensor <br/>\n",
     "> there are 10 classes for each image, corresponding to digits 0 - 9.  <br/>\n",
     "> each lable is one hot vector. <br/>\n",
     "> We'll be doing dropout for hidden layer so we'll need a placeholder for the dropout probability too <br/>\n",
     "> Use None for shape so we can change the batch_size once we've built the graph <br/>\n",
-    ">> dropout (keep_prob) rate  0.7~0.5 on training, but should be 1 for testing"
+    ">> dropout (keep_prob) rate  0.5 ~ 0.7 on training, but should be 1 for testing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# input place holders\n",
@@ -303,21 +301,21 @@
      "output_type": "stream",
      "text": [
       "Learning started. It takes sometime.\n",
-      "Epoch: 0001 cost = 0.404628778\n",
-      "Epoch: 0002 cost = 0.095087950\n",
-      "Epoch: 0003 cost = 0.069901463\n",
-      "Epoch: 0004 cost = 0.058066431\n",
-      "Epoch: 0005 cost = 0.050438056\n",
-      "Epoch: 0006 cost = 0.044384990\n",
-      "Epoch: 0007 cost = 0.040676977\n",
-      "Epoch: 0008 cost = 0.037585385\n",
-      "Epoch: 0009 cost = 0.037082402\n",
-      "Epoch: 0010 cost = 0.032992001\n",
-      "Epoch: 0011 cost = 0.031298308\n",
-      "Epoch: 0012 cost = 0.029742549\n",
-      "Epoch: 0013 cost = 0.026992802\n",
-      "Epoch: 0014 cost = 0.027021021\n",
-      "Epoch: 0015 cost = 0.026340648\n",
+      "Epoch: 0001 cost = 0.420728283\n",
+      "Epoch: 0002 cost = 0.093831111\n",
+      "Epoch: 0003 cost = 0.068687887\n",
+      "Epoch: 0004 cost = 0.057447360\n",
+      "Epoch: 0005 cost = 0.048385200\n",
+      "Epoch: 0006 cost = 0.043854826\n",
+      "Epoch: 0007 cost = 0.038436120\n",
+      "Epoch: 0008 cost = 0.038062397\n",
+      "Epoch: 0009 cost = 0.034725077\n",
+      "Epoch: 0010 cost = 0.031151260\n",
+      "Epoch: 0011 cost = 0.031648903\n",
+      "Epoch: 0012 cost = 0.029351540\n",
+      "Epoch: 0013 cost = 0.027477079\n",
+      "Epoch: 0014 cost = 0.028468259\n",
+      "Epoch: 0015 cost = 0.024895316\n",
       "Learning Finished!\n"
      ]
     }
@@ -356,16 +354,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9935\n",
-      "Label:  [9]\n",
-      "Prediction:  [9]\n"
+      "Accuracy: 0.9932\n",
+      "Label:  [2]\n",
+      "Prediction:  [2]\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADh9JREFUeJzt3V+MHfV5xvHndaxeOEiAIuwVmGCq0rTEBmMUW8gIxiAS\nywqyyQW4+AICtnJh2lCEFOKbPS6VSCpkyb2IWLBjmSpWkkZKcSKa4piMKlplMS02uFlDBDI2sb2m\nFTU2CIHh7cWOt2eXPb853vNvzr7fj7Ty2Xnn7Lw76+fMzPmdmTF3F4BYZvW6AQDdR/CBgAg+EBDB\nBwIi+EBABB8IqKXgm9lKMztkZq+b2Xfa1RSAzrLpjuOb2SxJr0u6VdIxSfskrXX3Q5Pm44MCQI+4\nu001vZUt/lJJv3f3t9z9Y0k/lrS6wcLHvwYHByd8X7Uv+pu5/VW5t070l9JK8C+TdLTu+7eLaQAq\njjf3gIBmt/DcP0j6Yt3384tpn1Gr1cYfX3TRRS0ssvOyLOt1C0n0N31V7k1qvb88z5XneVPztvLm\n3uckvaaxN/eOS3pR0l+4+8ik+Xy6ywAwfWYmb/Dm3rS3+O7+iZk9IOk5jR0ybJ8cegDVNO0tftML\nYIsP9ERqi8+be0BABB8IiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIIIPBETw\ngYAIPhAQwQcCIvhAQAQfCIjgAwERfCAggg8ERPCBgAg+EBDBBwIi+EBABB8IiOADARF8ICCCDwRE\n8IGACD4Q0OxWnmxmhyWdkvSppI/dfWk7mgLQWS0FX2OBz9z93XY0A6A7Wt3Vtzb8DABd1mpoXdIe\nM9tnZhva0RCAzmt1V3+5ux83s0s09gIw4u4vTJ6pVquNP86yTFmWtbhYAJPlea48z5ua19y9LQs1\ns0FJp919y6Tp3q5lAGiemcndbaratHf1zWyOmV1QPP68pK9KOjjdnwege1rZ1Z8n6edm5sXP+ZG7\nP9eetgB0Utt29RsugF39Svvoo4+S9dHR0WR9aGgoWT94ML0TuHv37mR9yZIlyfrKlSuT9UWLFiXr\nd911V7Lezzqyqw+gfxF8ICCCDwRE8IGACD4QEMEHAiL4QECM489ww8PDyfrGjRuT9f379yfrZX9b\nsymHkSvz/LNnzybr/YxxfAATEHwgIIIPBETwgYAIPhAQwQcCIvhAQK1ecw8d9sEHHyTrN954Y7J+\n4MCBZL3VcfC1a9cm6+vWrUvWV61alayXOXr0aLK+YMGCln7+TMUWHwiI4AMBEXwgIIIPBETwgYAI\nPhAQwQcCYhy/x5599tlk/fHHH0/Wy8bpy8bhN23alKyXXXd+4cKFyXqnvfnmm8l62e8fFVt8ICCC\nDwRE8IGACD4QEMEHAiL4QEAEHwiodBzfzLZL+rqkUXe/pph2saSfSLpC0mFJd7r7qQ72WVll95cv\nu279tm3bkvVZs9KvzTfffHOyXnb/+quuuipZr7pWrzdQdt+BZcuWnXdP/aCZLf4OSV+bNO0RSb92\n9y9Jel7Sd9vdGIDOKQ2+u78g6d1Jk1dL2lk83ilpTZv7AtBB0z3Gn+vuo5Lk7ickzW1fSwA6rV2f\n1U8eSNVqtfHHWZYpy7I2LRbAOXmeK8/zpuadbvBHzWyeu4+a2YCkk6mZ64MPoDMmb1Q3b97ccN5m\nd/Wt+Dpnt6R7i8f3SHrmfBoE0FulwTezXZL+XdKfmtkRM/umpO9Jus3MXpN0a/E9gD5hnb53vZl5\np5fRS2XXdb/yyiuT9bJ1s3Xr1mT9vvvuS9bnzJmTrPe7DRs2JOs7duxI1svWzxtvvJGsX3LJJcl6\nL5mZ3H3KCxLwyT0gIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjr6reobBy+rF52vvz69evPu6d+0ur1\nDLZv356sl11X//Tp08n6hx9+mKz3K7b4QEAEHwiI4AMBEXwgIIIPBETwgYAIPhAQ4/gtKhsnLqvP\n9HH6Mk888USyXnY+favr//rrr0/WBwYGkvV+xRYfCIjgAwERfCAggg8ERPCBgAg+EBDBBwLiuvot\nOnLkSLJedl3922+/PVl/9NFHk/VFixYl671Wdv/5G264IVkvG4cv+79V9vxPPvkkWe9nXFcfwAQE\nHwiI4AMBEXwgIIIPBETwgYAIPhBQ6Ti+mW2X9HVJo+5+TTFtUNIGSSeL2Ta5+68aPH9Gj+OfOnUq\nWb/66quT9RMnTiTrZePQN910U7J+7bXXJuu33XZbsn7gwIFkfc+ePcn6Sy+9lKy///77yXrZ79/q\n5yAWLlyYrPezVsfxd0j62hTTt7j7kuJrytADqKbS4Lv7C5LenaKUfikGUFmtHOM/YGb7zWybmV3Y\nto4AdNx0r7n3A0l/4+5uZn8raYuk+xvNXKvVxh9nWaYsy6a5WACN5HmuPM+bmndawXf3d+q+fUrS\nL1Lz1wcfQGdM3qhu3ry54bzN7uqb6o7pzaz+0qPfkHTwvDoE0FOlW3wz2yUpk/QFMzsiaVDSCjNb\nLOlTSYclfauDPQJoM87H77Ft27Yl67t27UrWR0ZGkvWTJ08m62V/m7Lryrf6OYQ5c+Yk63v37k3W\nly5dmqxHxvn4ACYg+EBABB8IiOADARF8ICCCDwRE8IGAGMfvc2XXA3jvvfda+vlDQ0PJ+mOPPZas\nl43jl/38++9veAoISjCOD2ACgg8ERPCBgAg+EBDBBwIi+EBABB8IiHH84F555ZVk/brrrkvWy/62\n69evT9affPLJZB3Txzg+gAkIPhAQwQcCIvhAQAQfCIjgAwERfCAgxvFnuOHh4WT9jjvuSNbLrss/\nd+7cZL3suv8XXsj9VjuFcXwAExB8ICCCDwRE8IGACD4QEMEHAiL4QECl4/hmNl/S05LmSfpU0lPu\n/vdmdrGkn0i6QtJhSXe6+2cu8s44fmcdPXo0WV+2bFmyXnZ/+4GBgWT92LFjyTp6p9Vx/LOSHnL3\nL0u6QdJGM/szSY9I+rW7f0nS85K+266GAXRWafDd/YS77y8en5E0Imm+pNWSdhaz7ZS0plNNAmiv\n8zrGN7MFkhZL+q2kee4+Ko29OEhKf3YTQGXMbnZGM7tA0s8kfdvdz5jZ5AP3hgfytVpt/HGWZcqy\n7Py6BFAqz3Pled7UvE2dpGNmsyX9UtI/u/vWYtqIpMzdR81sQNJv3P3Pp3gub+51EG/uoZF2nKTz\nQ0m/Oxf6wm5J9xaP75H0zLQ7BNBVpbv6ZrZc0jpJr5rZyxrbpd8k6fuSfmpm90l6S9KdnWwUQPtw\nPn6fu/TSS5P1svPpFy9enKzv3bs3Wed8+urifHwAExB8ICCCDwRE8IGACD4QEMEHAiL4QEBNf1Yf\nvfHggw8m68ePH0/W16xJnzQ5NDSUrDNOPzOxxQcCIvhAQAQfCIjgAwERfCAggg8ERPCBgDgfv+Ju\nueWWZP3QoUPJ+vDwcLJ++eWXn3dP6A+cjw9gAoIPBETwgYAIPhAQwQcCIvhAQAQfCIjz8Suu7DMQ\nK1asSNYZp8dU2OIDARF8ICCCDwRE8IGACD4QEMEHAioNvpnNN7Pnzey/zOxVM/vLYvqgmb1tZv9Z\nfK3sfLsA2qGZcfyzkh5y9/1mdoGk/zCzPUVti7tv6Vx7MJvydOpx69at61InmElKg+/uJySdKB6f\nMbMRSZcV5fT/SgCVdF7H+Ga2QNJiSecu6/KAme03s21mxi1XgD7RdPCL3fyfSfq2u5+R9ANJf+zu\nizW2R8AuP9AnmvqsvpnN1ljo/8Hdn5Ekd3+nbpanJP2i0fNrtdr44yzLlGXZNFoFkJLnufI8b2re\npi62aWZPS/pvd3+obtpAcfwvM/trSV9x97uneC4X22xB2cU2H3744WR91apV7WwHfSR1sc3SLb6Z\nLZe0TtKrZvayJJe0SdLdZrZY0qeSDkv6Vts6BtBRzbyr/2+SPjdF6VftbwdAN3BdfWCG4rr6ACYg\n+EBABB8IiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwio68Fv9nzhXqG/1lS5vyr3JnW3P4I/\nCf21psr9Vbk3aYYHH0DvEXwgoK6cj9/RBQBoqNH5+B0PPoDqYVcfCIjgAwF1LfhmttLMDpnZ62b2\nnW4tt1lmdtjMDpjZy2b2YgX62W5mo2b2St20i83sOTN7zcz+pZd3L2rQX2VupDrFzV7/qpheiXXY\n65vRduUY38xmSXpd0q2SjknaJ2mtux/q+MKbZGZvSrre3d/tdS+SZGY3Sjoj6Wl3v6aY9n1J/+Pu\nf1e8eF7s7o9UqL9BSaercCNVMxuQNFB/s1dJqyV9UxVYh4n+7lIX1mG3tvhLJf3e3d9y948l/Vhj\nv2SVmCp06OPuL0ia/CK0WtLO4vFOSWu62lSdBv1JFbmRqrufcPf9xeMzkkYkzVdF1mGD/rp2M9pu\n/Ue/TNLRuu/f1v//klXhkvaY2T4z29DrZhqY6+6j0vhdjOf2uJ+pVO5GqnU3e/2tpHlVW4e9uBlt\nZbZwFbDc3ZdIWiVpY7ErW3VVG4ut3I1Up7jZ6+R11tN12Kub0XYr+H+Q9MW67+cX0yrD3Y8X/74j\n6ecaOzypmlEzmyeNHyOe7HE/E7j7O3V3T3lK0ld62c9UN3tVhdZho5vRdmMddiv4+yT9iZldYWZ/\nJGmtpN1dWnYpM5tTvPLKzD4v6auSDva2K0ljx3r1x3u7Jd1bPL5H0jOTn9BlE/orgnTON9T7dfhD\nSb9z961106q0Dj/TX7fWYdc+uVcMS2zV2IvNdnf/XlcW3AQzu1JjW3nX2P0Ef9Tr/sxsl6RM0hck\njUoalPRPkv5R0uWS3pJ0p7v/b4X6W6GxY9XxG6meO57uQX/LJf2rpFc19nc9d7PXFyX9VD1eh4n+\n7lYX1iEf2QUC4s09ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMB/R8V9CSZvZjAiQAAAABJRU5E\nrkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADJ5JREFUeJzt3V2IHfd5x/Hv44peJIbYmEoCK3FaCtpSMCIlhuJenKCS\nmBKQkcB13Qu7LSYguQ3NTRzf7Kr0oumFwQXtjaMEOcTkTUpk37RO5B6KL1KLNmrtRrsOtFLjxFq7\nxTHRnVs9vdgjdXe958Vnzston+8HFs/OzJl5dqzfmZf/zPwjM5FUyy3zLkDS7Bl8qSCDLxVk8KWC\nDL5UkMGXCmoU/Ii4LyJWIuK1iPj8pIqSNF0xbjt+RNwCvAYcBH4GnAcezMyVLfN5o4A0J5kZ241v\nsse/B/hxZl7OzHeBrwOH+qz8xs/i4uKm39v2Y307t7421zaN+gZpEvw7gZ9s+P313jhJLefFPamg\nXQ0++1PgIxt+39cb9x5LS0s3hm+77bYGq5y+Tqcz7xIGsr7xtbk2aF5ft9ul2+2ONG+Ti3u/BKyy\nfnHvDeBl4A8y8+KW+XLcdUgaX0SQfS7ujb3Hz8z/jYjHgBdYP2U4uTX0ktpp7D3+yCtwjy/NxaA9\nvhf3pIIMvlSQwZcKMvhSQQZfKsjgSwUZfKkggy8VZPClggy+VJDBlwoy+FJBBl8qyOBLBRl8qSCD\nLxVk8KWCDL5UkMGXCjL4UkEGXyrI4EsFGXypoCZdaOkmsLy8PHD6sWPHZlTJeFZWVgZO379//4wq\n2Vnc40sFGXypIIMvFWTwpYIMvlSQwZcKMvhSQdGk7/qIuAS8A1wD3s3Me7aZJ5uso7rV1dWB0xcW\nFmZUSTudOHFi4PSjR4/OqJL2iQgyM7ab1vQGnmtAJzPfbrgcSTPU9FA/JrAMSTPWNLQJfC8izkfE\no5MoSNL0NT3Uvzcz34iIX2H9C+BiZr60daalpaUbw51Oh06n03C1krbqdrt0u92R5m10cW/TgiIW\ngV9k5pNbxntxrwEv7g3mxb3+Bl3cG/tQPyI+EBG39oY/CHwSeHXc5UmanSaH+nuA70RE9pbztcx8\nYTJlSZqmsYOfmf8BHJhgLdrGuXPnprr8th8qHzlyZOD0Ye8TGLb9Tp8+/b5r2glsipMKMvhSQQZf\nKsjgSwUZfKkggy8VZPClgiZ2y27fFXjLbiPTvmX3Zv9/E7HtHakju9n//kGmcsuupJuXwZcKMvhS\nQQZfKsjgSwUZfKkggy8VZDv+Dre8vDxw+sGDBwdOb3v/803b8dv+PoImbMeXtInBlwoy+FJBBl8q\nyOBLBRl8qSCDLxVkO75uak3b8VdWVgZOb/t9DIPYji9pE4MvFWTwpYIMvlSQwZcKMvhSQQZfKmho\nO35EnAQ+Daxl5t29cbcD3wDuAi4BD2TmO30+bzu+xta0nX6Ynfxvs2k7/leAT20Z9zjw/czcD7wI\nfKFZiZJmaWjwM/Ml4O0tow8Bp3rDp4D7J1yXpCka9xx/d2auAWTmFWD35EqSNG27JrScgSdKS0tL\nN4Y7nQ6dTmdCq5V0XbfbpdvtjjTvSA/pRMRdwPMbLu5dBDqZuRYRe4G/z8zf6PNZL+5pbF7cG98k\nHtKJ3s91zwGP9IYfBs6OXZ2kmRulOe9ZoAPcAawBi8B3gW8BHwYus96c9/M+n3ePr7G5xx/foD3+\n0HP8zHyoz6TfbVSVSlhdXR04fWFhYarrP3z48FSXf7Pyzj2pIIMvFWTwpYIMvlSQwZcKMvhSQQZf\nKmhS9+qrqOXl5YHTjx07NtX17+T34k+Te3ypIIMvFWTwpYIMvlSQwZcKMvhSQQZfKsh2/OKGtcOf\nO3du4PQzZ840Wv+w5+VPnz7daPnannt8qSCDLxVk8KWCDL5UkMGXCjL4UkEGXyrIdvyWG/Ze+mHt\n7NN+Hn4Yn5dvJ/f4UkEGXyrI4EsFGXypIIMvFWTwpYIMvlTQ0Hb8iDgJfBpYy8y7e+MWgUeBN3uz\nPZGZfzu1Kneweb+Xfhifl9+ZRtnjfwX41Dbjn8zMj/V+DL10Exka/Mx8CXh7m0kx+XIkzUKTc/zH\nIuJCRHwpIj40sYokTd249+ovA3+RmRkRfwk8CfxJv5mXlpZuDHc6HTqdzpirldRPt9ul2+2ONO9Y\nwc/Mtzb8+jTw/KD5NwZf0nRs3akeP36877yjHuoHG87pI2LvhmmHgVffV4WS5mqU5rxngQ5wR0T8\nJ7AIfCIiDgDXgEvAZ6ZYo6QJi8yc7goictrraLN5t9OfOHFi4PSjR49Odf2an4ggM7dtffPOPakg\ngy8VZPClggy+VJDBlwoy+FJBBl8qyHb8KYuY7kOMPi+vfmzHl7SJwZcKMvhSQQZfKsjgSwUZfKkg\ngy8VZDv+lE27Hb/yttVgtuNL2sTgSwUZfKkggy8VZPClggy+VJDBlwoy+FJBBl8qyOBLBRl8qSCD\nLxVk8KWCDL5UkMGXCto1bIaI2Ac8A+wBrgFPZ+bfRMTtwDeAu4BLwAOZ+c4Ua70pDXvv/ZkzZ2ZU\nSU3Ly8uNPn/w4MGB0/fv399o+fMyyh7/f4DPZeZvAr8NHIuIBeBx4PuZuR94EfjC9MqUNElDg5+Z\nVzLzQm/4KnAR2AccAk71ZjsF3D+tIiVN1vs6x4+IjwIHgB8AezJzDda/HIDdky5O0nQMPce/LiJu\nBb4NfDYzr0bE1pe99X3529LS0o3hTqdDp9N5f1VKGqrb7dLtdkead6TgR8Qu1kP/1cw82xu9FhF7\nMnMtIvYCb/b7/MbgS5qOrTvV48eP95131EP9LwM/ysynNox7DnikN/wwcHbrhyS10yjNefcCfwi8\nEhE/ZP2Q/gngi8A3I+KPgcvAA9MsVNLk+F79KVtdXR04fWFhodHyh90ncPr06UbLb2pYO/q5c+cG\nTm/7fQ4nTpwYOP3o0aMzquS9fK++pE0MvlSQwZcKMvhSQQZfKsjgSwUZfKkg2/HnLGLbZlaNaNh9\nDMOepx/mZn4e33Z8SZsYfKkggy8VZPClggy+VJDBlwoy+FJBI79zT9Mx7B6HI0eODJze9ufVV1ZW\nBk5vczv4TuYeXyrI4EsFGXypIIMvFWTwpYIMvlSQwZcK8nl8aYfyeXxJmxh8qSCDLxVk8KWCDL5U\nkMGXChoa/IjYFxEvRsS/RcQrEfGnvfGLEfF6RPxz7+e+6ZcraRKGtuNHxF5gb2ZeiIhbgX8CDgG/\nD/wiM58c8nnb8aU5GNSOP/RFHJl5BbjSG74aEReBO68ve2JVSpqZ93WOHxEfBQ4A/9gb9VhEXIiI\nL0XEhyZcm6QpGTn4vcP8bwOfzcyrwDLwa5l5gPUjgoGH/JLaY6R37kXELtZD/9XMPAuQmW9tmOVp\n4Pl+n19aWrox3Ol06HQ6Y5QqaZBut0u32x1p3pEe0omIZ4D/yszPbRi3t3f+T0T8OfDxzHxom896\ncU+ag0EX90a5qn8v8A/AK0D2fp4AHmL9fP8acAn4TGaubfN5gy/NQaPgT2DlBl+aAx/LlbSJwZcK\nMvhSQQZfKsjgSwUZfKkggy8VZPClggy+VJDBlwoy+FJBBl8qaObBH/V54XmxvmbaXF+ba4PZ1mfw\nt7C+ZtpcX5trgx0efEnzZ/ClgmbyIo6prkBSX3N7A4+k9vFQXyrI4EsFzSz4EXFfRKxExGsR8flZ\nrXdUEXEpIv4lIn4YES+3oJ6TEbEWEf+6YdztEfFCRKxGxN/Ns/eiPvW1piPVbTp7/bPe+FZsw3l3\nRjuTc/yIuAV4DTgI/Aw4DzyYmStTX/mIIuLfgd/KzLfnXQtARPwOcBV4JjPv7o37IvDfmfnXvS/P\n2zPz8RbVt8gIHanOwoDOXv+IFmzDpp3RNjWrPf49wI8z83Jmvgt8nfU/sk2CFp36ZOZLwNYvoUPA\nqd7wKeD+mRa1QZ/6oCUdqWbmlcy80Bu+ClwE9tGSbdinvpl1Rjurf+h3Aj/Z8Pvr/P8f2RYJfC8i\nzkfEo/Mupo/d1zst6fVitHvO9WyndR2pbujs9QfAnrZtw3l0RtuaPVwL3JuZHwN+DzjWO5Rtu7a1\nxbauI9VtOnvdus3mug3n1RntrIL/U+AjG37f1xvXGpn5Ru+/bwHfYf30pG3WImIP3DhHfHPO9WyS\nmW9t6DbpaeDj86xnu85eadE27NcZ7Sy24ayCfx749Yi4KyJ+GXgQeG5G6x4qIj7Q++YlIj4IfBJ4\ndb5VAevnehvP954DHukNPwyc3fqBGdtUXy9I1x1m/tvwy8CPMvOpDePatA3fU9+stuHM7tzrNUs8\nxfqXzcnM/KuZrHgEEfGrrO/lk/Wuw7827/oi4lmgA9wBrAGLwHeBbwEfBi4DD2Tmz1tU3ycYoSPV\nGdXXr7PXl4FvMudt2LQz2sbr95ZdqR4v7kkFGXypIIMvFWTwpYIMvlSQwZcKMvhSQQZfKuj/ACvU\n1qtIJnSiAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x29202a9b7f0>"
+       "<matplotlib.figure.Figure at 0x1e353e37d30>"
       ]
      },
      "metadata": {},
