--- a/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:blue\">[</span> Lab 11-5: MNIST and Deep learning CNN <span style=\"color:blue\">]</span>\n",
-    " <p> $\\qquad$ 출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p> <br/>\n",
+    " <p> &nbsp;출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p> <br/>\n",
     " > [CS 20SI: Tensorflow for Deep Learning Research](http://web.stanford.edu/class/cs20si/)"
    ]
   },
