--- a/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
+++ b/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:blue\">[</span> Lab 11-2 : MNIST and Deep learning CNN <span style=\"color:blue\">]</span>\n",
-    " <p> $\\qquad$ 출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p> <br/>\n",
+    " <p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p> <br/>\n",
     " > [CS 20SI: Tensorflow for Deep Learning Research](http://web.stanford.edu/class/cs20si/)"
    ]
   },
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# input place holders\n",
